--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-table": "^8.21.3",
     "@upstash/redis": "^1.35.1",
+    "@vercel/speed-insights": "^1.2.0",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.4",
@@ -24,6 +26,7 @@
     "react-dom": "^19.0.0",
     "shadcn": "^2.7.0",
     "tailwind-merge": "^3.3.1",
+    "yarn": "^1.22.22",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
